1.0.5
- Fixed an issue present in the original mod which caused Archipelago worlds to not be able to build aquaculture.

1.0.4
- Reduced the defense debuff from Military Virus to -50% (was -75%).
- Fixed Military Virus' production buff not applying to Orbital Works.
- Minor text change to Ancient Religious Landmark to specify that it involves Luddic immigrants.


1.0.3
- Fixed a major bug that prevented the US_star_orange from spawning.
- Added a few easter egg names for stars and planets, most of them references to other games but subtle enough you probably won't notice.

1.0.2
- Reverted back to the original Artificial texture due to the new one not scaling well on larger planets.
- Magnetic Crust now properly applies its flat defense buff.
- Unique planets and conditions can no longer spawn on the solar array planet.
- Artificial worlds can now spawn in Hypershunt systems regardless if they have ruins or derelicts.
- Renamed "Unstable Arid" to "Arid Unstable" and "Bombarded Lifeless" to "Lifeless-Bombarded" for better vanilla consistency.
- Updated icon colors for unique planets.
- Tweaked some condition text.
- addConditionIfNeeded and removeConditionIfNeeded functions are now public for anyone using Unknown Skies for custom systems.
- Massive internal refactoring.

1.0.1
- Updated for 0.97a
- Added a new Artificial planet texture courtesy of Draconis13.
- Unique planets and conditions can no longer spawn in the Abyss.
- Parasitic Spores can no longer rarely spawn on Magnetic worlds.
- Planets with Military Virus will always have at least Widespread Ruins.
- Artificial planets will always have at least Extensive Ruins.
- US_gas_giant is now appropriately labeled as an Ice Giant.
- Military Virus' description now mentions its stability debuff.
- Renamed "Windy Arid" to "Windswept".
- Fixed "a Archipelago" typo.
- Fixed a few special conditions breaking if removed.
- Externalized Military Virus strings (which for some reason weren't already).