@@ -4,45 +4,55 @@
 		"-":"-",
 		"%":"%",
 
-		"artificial_0":"%s defense rating.",
+		"artificial":"Chaotic structures",
+		"artificial_0":"%s ground defense strength",
 
-		"base_0":"%s ship quality if there is an active Heavy Industry or Orbital Works.",
+		"base":"Pre-Collapse military base",
+		"base_0":"%s factionwide ship quality (Heavy Industry)",
 
-		"drone_0":"%s hazard rating (based on population size).",
+		"drone_0":"%s hazard rating (based on market size)",
 
-		"crystal_0":"%s luxury goods production.",
+		"crystal":"Chemical crystals",
+		"crystal_0":"%s luxury goods production (Light Industry)",
 
-		"accelerator_0":"%s accessibility (based on market size).",
+		"accelerator":"Old space accelerator",
+		"accelerator_0":"%s accessibility (based on market size)",
 
-		"magnet_0":"%s defense rating.",
-		"magnet_1":"%s population growth (based on market size).",
+		"magnet":"Magnetic crust",
+		"magnet_0":"%s ground defense strength",
+		"magnet_1":"%s population growth (based on market size)",
 
-		"spore_0":"Local drug demand %s.",
-		"spore_1":"nullified",
-		"spore_2":"%s population growth (based on market size).",
-		"spore_3":"%s minimal stability.",
+		"spore":"Parasitic spores",
+		"spore_0":"%s recreational drug demand",
+		"spore_1":"Nullifies",
+		"spore_2":"%s population growth (based on market size)",
+		"spore_3":"%s minimal stability",
 		"spore_4":"+5",
-		"spore_5":"%s production from all industries.",
+		"spore_5":"%s commodity production (all industries)",
 
-		"landmark_0":"%s stability.",
-		"landmark_1":"%s accessibility.",
-		"landmark_2":"%s population growth (based on market size).",
+		"landmark":"Ancient religious landmark",
+		"landmark_0":"%s stability",
+		"landmark_1":"%s accessibility",
+		"landmark_2":"%s population growth (based on market size)",
 
-		"shroom_0":"Local drug demand %s.",
-		"shroom_1":"nullified",
-		"shroom_2":"%s recreational drug production.",
-		"shroom_3":"%s stability.",
+		"shroom":"Psychoactive fungus",
+		"shroom_0":"%s recreational drug demand",
+		"shroom_1":"Nullifies",
+		"shroom_2":"%s recreational drug production (Light Industry)",
+		"shroom_3":"%s stability",
 
-		"storm_0":"%s defense rating.",
-		"storm_1":"%s accessibility.",
+		"storm":"Perpetual dust storm",
+		"storm_0":"%s ground defense strength",
+		"storm_1":"%s accessibility",
 
 		"tunnel_0":"Hazard rating fixed to %s",
 		"tunnel_1":"100%",
-		"tunnel_2":"%s population growth (based on market size).",
+		"tunnel_2":"%s population growth (based on market size)",
 
-		"virus_0":"%s defense rating.",
-		"virus_1":"%s population growth (based on market size).",
-		"virus_2":"%s heavy armament production.",
-		"virus_3":"%s stability.",
+		"virus":"Military virus",
+		"virus_0":"%s ground defense strength",
+		"virus_1":"%s population growth (based on market size)",
+		"virus_2":"%s heavy armament production (Heavy Industry)",
+		"virus_3":"%s stability"
 	}
 }
